Fix overflow

--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -1,5 +1,7 @@
 nav ul {
-    width: 95%;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -39,7 +41,7 @@ nav li:first-child {
     right: 0;
     top: 0;
     height: 100vh;
-    width: fit-content;
+    width: 50%;
     z-index: 10;
     display: flex;
     flex-direction: column;
