--- a/assets/styles/showcase.css
+++ b/assets/styles/showcase.css
@@ -32,14 +32,17 @@
             rgba(255, 255, 255, 0.01) 75%);
 }
 
-
+.card h2 {
+    text-align: center;
+}
 
 .card ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 0;
     flex-wrap: wrap;
     gap: 1rem;
+    list-style: none;
 }
 
 .card ul li {
